--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   },
   "engine": {
     "node": ">=0.10 <0.11"
+  },
+  "devDependencies": {
+    "mocha": "~1.20.1",
+    "gulp": "~3.8.6",
+    "gulp-mocha": "~0.5.1"
   }
 }
