--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "test-perf-summary",
-  "description": "Pretty-print the results of Gaia's test-perf",
-  "version": "0.0.5",
+  "name": "raptor-compare",
+  "description": "Test Raptor results for statistical significance",
+  "version": "0.0.1",
   "author": "Staś Małolepszy <stas@mozilla.com>",
-  "license": "MIT",
+  "license": "ICS",
   "repository": {
     "type": "git",
-    "url": "https://github.com/stasm/test-perf-summary.git"
+    "url": "https://github.com/stasm/raptor-compare.git"
   },
   "keywords": [
     "firefoxos",
@@ -23,7 +23,7 @@
     "easy-table": "~0.3.0"
   },
   "engine": {
-    "node": ">=0.10 <0.11"
+    "node": ">=4.1"
   },
   "devDependencies": {
     "mocha": "~1.20.1",
