--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "test": "gulp test"
   },
   "dependencies": {
+    "easy-table": "~0.3.0",
     "minimist": "~0.1.0",
-    "ttest": "~0.3.0",
+    "promisify-node": "^0.2.1",
     "summary": "~0.3.0",
-    "easy-table": "~0.3.0"
+    "ttest": "~0.3.0"
   },
   "engine": {
     "node": ">=4.1"
