--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "node": ">=4.1"
   },
   "devDependencies": {
-    "mocha": "^1.20.1",
-    "gulp": "^3.8.6",
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^1.0.0",
     "gulp-mocha": "^0.5.1"
   }
 }
